--- a/src/assets/lang/lang.json
+++ b/src/assets/lang/lang.json
@@ -43,9 +43,12 @@
         "editTodoMenu": "Edit",
         "addTodo": "Add TODO",
         "editTodo": "Edit TODO",
-        "alarmSound": "Alarm Sound",
+        "alarmSound": "Sound",
         "alarmSound_digital": "Digital",
         "alarmSound_noSound": "No sound",
+        "alarmVibration": "Vibration",
+        "alarmVibration_on": "On",
+        "alarmVibration_off": "Off",
         "en": "English",
         "ko": "한국어",
         "language": "Language"
@@ -91,9 +94,12 @@
         "editTodoMenu": "수정",
         "addTodo": "TODO 추가",
         "editTodo": "TODO 수정",
-        "alarmSound": "알람 소리",
+        "alarmSound": "소리",
         "alarmSound_digital": "디지털",
         "alarmSound_noSound": "소리 없음",
+        "alarmVibration": "진동",
+        "alarmVibration_on": "켜짐",
+        "alarmVibration_off": "꺼짐",
         "en": "English",
         "ko": "한국어",
         "language": "언어"
